# refactory

./: .env.example  .gitignore  DESIGN.md  README.md  REVIEW_STRATEGY.md  TODO.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CLI.md  README.md
examples/: config_example.py  insecure_code.py  performance_demo.py  sample_code.py  security_demo.py  slow_code.py
src/refactory/: __init__.py  cli.py  config.py
src/refactory/agents/: __init__.py  architect_agent.py  base_agent.py  performance_agent.py  security_agent.py
src/refactory/core/: __init__.py  models.py  review_engine.py
tests/: test_basic_functionality.py
