[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refactory"
version = "0.1.0"
description = "Multi-agent code analysis system for comprehensive code reviews"
authors = [{name = "Evan Volgas", email = "evan.volgas@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    # Core AI and data validation
    "pydantic-ai>=0.0.12",
    "pydantic>=2.5.0",

    # Code parsing and analysis
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",

    # CLI interface and output formatting
    "click>=8.1.0",
    "rich>=13.0.0",

    # File handling and pattern matching
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",

    # Code formatting and linting
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

# Future language support (commented out for now)
# multi-lang = [
#     "tree-sitter-javascript>=0.21.0",
#     "tree-sitter-typescript>=0.21.0",
#     "tree-sitter-java>=0.21.0",
#     "tree-sitter-cpp>=0.21.0",
#     "tree-sitter-go>=0.21.0",
# ]

[project.scripts]
refactory = "refactory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


